2014-03-28  Corinna Vinschen  <corinna@vinschen.de>

	* exceptions.cc (_cygtls::signal_debugger): Move memcpy to copy context
	from incoming siginfo_t to thread_context, too.

2014-03-27  Corinna Vinschen  <corinna@vinschen.de>

	* gendef (_sigbe/x86_64): Fix typo in .seh_proc pseudo-op.
	(setjmp/x86_64): Drop storing ExceptionList pointer in jmp_buf->Frame.
	Drop comment.  Store likely frame in rdx.  Jump to __setjmpex.
	(__setjmpex): New function providing setjmp functionality.  Fetch
	jmp_buf->Frame from rdx, like MSVCRT setjmpex.
	(__sjfault/x86_64): Store rdx content in jmp_buf->Frame.
	(__ljfault/x86_64): Don't restore ExceptionList pointer.
	(longjmp/x86_64): Ditto.

2014-03-19  Christopher Faylor  <me.cygwin2014@cgf.cx>

	* fhandler_dsp.cc (fhandler_dev_dsp::ioctl): Actually pass ioctl
	argument to _ioctl.

2014-03-19  Christopher Faylor  <me.cygwin2014@cgf.cx>

	* fhandler.h (fhandler_dev_dsp): Remove variable names from
	declarations.
	(fhandler_dev_dsp::close_audio_in): Make __reg1.
	(fhandler_dev_dsp::close_audio_out): Make __reg2.
	* fhandler_dsp.cc (fhandler_dev_dsp::close_audio_in): Make __reg1.
	(fhandler_dev_dsp::close_audio_out): Make __reg2.
	(fhandler_dev_dsp::close): Don't abruptly terminate sound just because
	we are exiting.

2014-03-19  Corinna Vinschen  <corinna@vinschen.de>

	* exception.h (exception::handle_while_being_debugged): Declare.
	(exception::exception): Install unhandled exception filter.
	* exceptions.cc (exception::handle_while_being_debugged): New method.

2014-03-19  Corinna Vinschen  <corinna@vinschen.de>

	* passwd.cc (pg_ent::enumerate_ad): Ignore primary domain in list of
	trusted domains only if all trusted domains are enumerated anyway.
	Explain why.

2014-03-18  Christopher Faylor  <me.cygwin2014@cgf.cx>

	* fhandler_dsp.cc (fhandler_dev_dsp::fixup_after_fork): Actually call
	_fixup_after_fork rather than looping forever.
	(fhandler_dev_dsp::fixup_after_exec): Ditto.
